--- a/infra/Dockerfile
+++ b/infra/Dockerfile
@@ -31,6 +31,7 @@ COPY --from=builder /app/package.json ./
 # https://nextjs.org/docs/advanced-features/output-file-tracing
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+COPY --from=builder --chown=nextjs:nodejs /app/public ./public
 
 USER nextjs
 
