Setup basic CI pipeline

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,30 @@ jobs:
         name: Checkout code
         uses: actions/checkout@v4
       -
+        name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+      -
+        name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'pnpm'
+      -
+        name: Install dependencies
+        run: |
+          pnpm i
+      -
         name: Campare locale files
         run: |
           # Compare locale message
           jq -r 'paths(scalars) | join(".")' messages/en.json | sort > en.keys
           jq -r 'paths(scalars) | join(".")' messages/de.json | sort > de.keys
           diff -u en.keys de.keys
+      -
+        name: Tests
+        run: |
+          pnpm tsc
+          pnpm lint
 
