Add forgot password and password reset feature

--- a/infra/kubernetes/base/configmap.yaml
+++ b/infra/kubernetes/base/configmap.yaml
@@ -4,4 +4,5 @@ metadata:
   name: dotenv
 data:
   APP_NAME: BeerLog
+  APP_BASE_URL: https://beerlog.example.org
   DEFAULT_BEER_PRICE_CENTS: "100"
