--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "next": "15.5.3",
     "next-auth": "5.0.0-beta.29",
     "next-intl": "^4.3.8",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "otplib": "^12.0.1",
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.8"
   },
